Add Purchase, loyalty, price calculation logic + tests
