# src/main/java/com/shelest/booksy/domain/dto/PurchasePreviewRequest.java
@@ -4,16 +4,12 @@ import jakarta.validation.constraints.NotEmpty;
 import jakarta.validation.constraints.NotNull;
 import lombok.Data;
 
-import java.math.BigDecimal;
 import java.util.Set;
 
 @Data
-public class PurchaseRequest {
+public class PurchasePreviewRequest {
     @NotNull
     private Long customerId;
     @NotEmpty
     private Set<Long> bookIds;
-    @NotNull
-    private BigDecimal agreedTotalPrice;
-    private boolean loyaltyRewardApplied;
 }
